[project]
name = "cctv-human-recognition"
version = "0.1.0"
description = ""
authors = [
    {name = "Vincent Llanto",email = "cent.llanto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "transformers (>=4.53.1,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
]

[tool.poetry]
packages = [{include = "cctv-human-recognition"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "cctv-human-recognition.main:main"